--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,24 @@
 #数据库配置信息
-spring.datasource.url=jdbc:oracle:thin:@jszydb3:1521:siposrc3
-spring.datasource.username=sipo_soso
-spring.datasource.password=sipo_soso
+#spring.datasource.url=jdbc:oracle:thin:@jszydb3:1521:siposrc3
+#spring.datasource.username=sipo_soso
+#spring.datasource.password=sipo_soso
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+spring.datasource.url=jdbc:oracle:thin:@10.51.52.94:1521:xsdb1
+spring.datasource.username=SIPO_JSZK
+spring.datasource.password=SIPO_JSZK
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-
-#jpa配置信息
+#jpa
 jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
+
+#trs
+engine.trs.hostip=10.51.52.59
+engine.trs.port=8888
+engine.trs.username=system
+engine.trs.password=manager
+engine.trs.userId=
 
 #system
 system.params.env=production
 server.port=8088
+
