--- a/pom.xml
+++ b/pom.xml
@@ -65,6 +65,22 @@
 			<artifactId>gson</artifactId>
 			<version>2.8.5</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+			<version>1.16.18</version>
+			<scope>provided</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.trs</groupId>
+			<artifactId>trsmemorizer</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.trs</groupId>
+			<artifactId>trs4zljk</artifactId>
+			<version>1.0</version>
+		</dependency>
 		<!-- ##############################fandp end######################################-->
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
