--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,12 @@
 #数据库配置信息
-#spring.datasource.url=jdbc:oracle:thin:@jszydb3:1521:siposrc3
-#spring.datasource.username=sipo_soso
-#spring.datasource.password=sipo_soso
-#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
-spring.datasource.url=jdbc:oracle:thin:@10.51.52.94:1521:xsdb1
-spring.datasource.username=SIPO_JSZK
-spring.datasource.password=SIPO_JSZK
+spring.datasource.url=jdbc:oracle:thin:@jszydb3:1521:siposrc3
+spring.datasource.username=sipo_soso
+spring.datasource.password=sipo_soso
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#spring.datasource.url=jdbc:oracle:thin:@10.51.52.94:1521:xsdb1
+#spring.datasource.username=SIPO_JSZK
+#spring.datasource.password=SIPO_JSZK
+#spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #jpa
 jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
