--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 #数据库配置信息
-spring.datasource.url=jdbc:oracle:thin:@jszydb3:1521:siposrc3
+spring.datasource.url=jdbc:oracle:thin:@10.50.145.57:1521:siposrc3
 spring.datasource.username=sipo_soso
 spring.datasource.password=sipo_soso
 spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
@@ -20,5 +20,5 @@ engine.trs.userId=
 
 #system
 system.params.env=production
-server.port=8088
+server.port=8888
 
