--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,4 @@ engine.trs.userId=
 system.params.env=production
 server.port=8888
 
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.Oracle10gDialect
