--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,15 @@
 #数据库配置信息
-spring.datasource.url=jdbc:oracle:thin:@10.50.145.57:1521:siposrc3
-spring.datasource.username=sipo_soso
-spring.datasource.password=sipo_soso
-spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#57
+spring.primary.datasource.url=jdbc:oracle:thin:@10.50.145.57:1521:siposrc3
+spring.primary.datasource.username=sipo_soso
+spring.primary.datasource.password=sipo_soso
+spring.primary.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+#offline
+spring.secondary.datasource.url=jdbc:oracle:thin:@10.51.52.99:1521:xxdb1
+spring.secondary.datasource.username=sipo_prosearch
+spring.secondary.datasource.password=sipo_prosearch
+spring.secondary.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
+
 #spring.datasource.url=jdbc:oracle:thin:@10.51.52.94:1521:xsdb1
 #spring.datasource.username=SIPO_JSZK
 #spring.datasource.password=SIPO_JSZK
