--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,11 @@
 			<optional>true</optional>
 		</dependency>-->
 		<dependency>
+			<groupId>redis.clients</groupId>
+			<artifactId>jedis</artifactId>
+			<version>2.9.0</version>
+		</dependency>
+		<dependency>
 			<groupId>commons-lang</groupId>
 			<artifactId>commons-lang</artifactId>
 			<version>2.6</version>
